Grid overflow fix

--- a/src/userinterface/grid/slides/Grid/_Grid.scss
+++ b/src/userinterface/grid/slides/Grid/_Grid.scss
@@ -33,7 +33,7 @@ div.GridPrototype-container {
     flex-wrap: wrap;
     justify-content: space-between;
     position: relative;
-    max-height: 346px;
+    max-height: 306px;
     overflow: hidden;
 
     &:first-child {
